feat(events): edit, cancel and delete events; change and remove ticket categories
